# agentcore-terraform

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
.github/workflows/: CLAUDE.md  deploy.yml  secret-scan.yml
agent/: CLAUDE.md  agent.py
design_handoff_receipt_classifier/: README.md  Receipt Classifier.html
frontend/: .env.production  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: login.module.css  page.tsx
frontend/app/upload/: page.tsx  upload.module.css
frontend/components/: AmplifyProvider.tsx  CategoryGrid.module.css  CategoryGrid.tsx  Chip.module.css  Chip.tsx  Dropzone.module.css  Dropzone.tsx  HistoryList.module.css  HistoryList.tsx  Logo.tsx
frontend/lib/: api.ts  categories.ts  storage.ts  thumbnail.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: PageLayout.tsx  PrivateRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx  Upload.tsx
frontend/types/: index.ts
lambda/: CLAUDE.md  api_handler.py  classifications.json  handler.py  requirements.txt
scripts/: CLAUDE.md  bootstrap_state.sh
terraform/: .terraform.lock.hcl  CLAUDE.md  agentcore.tf  apigateway.tf  backend.tf  cloudwatch.tf  cognito.tf  frontend.tf  github_actions.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
