[project]
name = "receipt-classifier"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]

[dependency-groups]
lambda = [
    "boto3==1.38.0",
    "langchain==0.3.25",
    "langchain-aws==0.2.14",
    "numpy>=1.26.0,<2.3",
    "greenlet>=3.0.0,<3.3",
]
agent = [
    "boto3==1.38.0",
    "fastapi==0.115.12",
    "langchain==0.3.25",
    "langchain-aws==0.2.14",
    "uvicorn==0.34.2",
    "numpy>=1.26.0,<2.3",
    "greenlet>=3.0.0,<3.3",
]
